--- a/mystyles.css
+++ b/mystyles.css
@@ -22,8 +22,8 @@ h1 { line-height: 200%;
     padding-left: 20px;
     height: 72px;
     margin-bottom: 0;
-background-color:#231F20;
-color:#ffffff;
+background-color:#134f5c;
+color:#134f5c;
 }
 nav { font-weight: bold;
      padding: 5px;
