--- a/mystyles.css
+++ b/mystyles.css
@@ -1,6 +1,6 @@
 body { background-color:#e2fcf6;
       background-image: url(images/catBackground.png);
-      color: #e2fcf6;
+      color: #000000;
       font-family: Arial, helvetica;;
 }
 #wrapper { width: 80%;
@@ -12,7 +12,7 @@ body { background-color:#e2fcf6;
            box-shadow: 3px 3px 3px #666666;
 }
 header { background-color: #134f5c;
-         color: #134f5c;
+         color: #000000;
        font-family: Arial, helvetica;;
 }
 h1 { line-height: 200%;
@@ -23,7 +23,7 @@ h1 { line-height: 200%;
     height: 72px;
     margin-bottom: 0;
 background-color:#134f5c;
-color:#134f5c;
+color:#000000;
 }
 nav { font-weight: bold;
      padding: 5px;
