color change + image resizing

--- a/mystyles.css
+++ b/mystyles.css
@@ -8,7 +8,7 @@ body { background-color:#e2fcf6;
            max-width: 1024px;
            margin-right: auto;
            margin-left: auto;
-           background-color:#2b8660;
+           background-color:#49795b;
            box-shadow: 3px 3px 3px #666666;
 }
 header { background-color: #1f2322;
