--- a/mystyles.css
+++ b/mystyles.css
@@ -8,7 +8,7 @@ body { background-color:#e2fcf6;
            max-width: 1024px;
            margin-right: auto;
            margin-left: auto;
-           background-color:#6C809A;
+           background-color:#6B7A3E;
            box-shadow: 3px 3px 3px #666666;
 }
 header { background-color: #1f2322;
@@ -32,9 +32,9 @@ nav { font-weight: bold;
      padding: 20px 5px 0 20px;
 }
 nav a { text-decoration: none; }
-nav a:link { color: #E6CCBE; }
-nav a:visited { color: #E6CCBE }
-nav a:hover { color: #c7a592; }
+nav a:link { color: #1985A1; }
+nav a:visited { color: #1985A1 }
+nav a:hover { color: #16758D; }
 nav ul { list-style-type: none;
        margin: 0;
        padding-left: 0;
